--- a/RenderSystems/GLSupport/CMakeLists.txt
+++ b/RenderSystems/GLSupport/CMakeLists.txt
@@ -11,43 +11,29 @@
 
 # Add platform specific settings
 
-if(EGL_FOUND)
-  option(OGRE_GLSUPPORT_USE_EGL "use EGL for GL Context Creation instead of GLX/ WGL" FALSE)
-endif()
+option(OGRE_GLSUPPORT_USE_EGL "use EGL for GL Context Creation instead of GLX/ WGL" TRUE)
 
 if(ANDROID)
   file(GLOB PLATFORM_HEADERS "include/EGL/Android/*.h" "include/EGL/*.h")
   file(GLOB PLATFORM_SOURCES "src/EGL/Android/*.cpp" "src/EGL/*.cpp")
 
-  set(NATIVE_INCLUDES 
-      ${CMAKE_CURRENT_SOURCE_DIR}/include/EGL 
+  set(NATIVE_INCLUDES
+      ${CMAKE_CURRENT_SOURCE_DIR}/include/EGL
       ${CMAKE_CURRENT_SOURCE_DIR}/include/EGL/Android)
 elseif (EMSCRIPTEN)
   file(GLOB PLATFORM_HEADERS "include/EGL/Emscripten/*.h" "include/EGL/*.h")
   file(GLOB PLATFORM_SOURCES "src/EGL/Emscripten/*.cpp" "src/EGL/*.cpp")
 
-  set(NATIVE_INCLUDES 
-      ${CMAKE_CURRENT_SOURCE_DIR}/include/EGL 
+  set(NATIVE_INCLUDES
+      ${CMAKE_CURRENT_SOURCE_DIR}/include/EGL
       ${CMAKE_CURRENT_SOURCE_DIR}/include/EGL/Emscripten)
 elseif (WIN32)
-  if(OGRE_GLSUPPORT_USE_EGL)
-      file(GLOB PLATFORM_HEADERS "include/EGL/WIN32/*.h" "include/EGL/*.h")
-      file(GLOB PLATFORM_SOURCES "src/EGL/WIN32/*.cpp" "src/EGL/*.cpp")
-      
-      set(NATIVE_INCLUDES
-        ${CMAKE_CURRENT_SOURCE_DIR}/include/EGL
-        ${CMAKE_CURRENT_SOURCE_DIR}/include/EGL/WIN32)
-  else()
-    file(GLOB PLATFORM_HEADERS "include/win32/*.h")
-    file(GLOB PLATFORM_SOURCES "src/win32/*.cpp")
+  file(GLOB PLATFORM_HEADERS "include/EGL/WIN32/*.h" "include/EGL/*.h")
+  file(GLOB PLATFORM_SOURCES "src/EGL/WIN32/*.cpp" "src/EGL/*.cpp")
 
-    set(NATIVE_INCLUDES
-        ${CMAKE_CURRENT_SOURCE_DIR}/include/win32)
-        
-    if(MINGW)
-        set(PLATFORM_LIBS opengl32)
-    endif()
-  endif()
+  set(NATIVE_INCLUDES
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/EGL
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/EGL/WIN32)
 elseif(APPLE_IOS)
   # only works with GLES2 - no shared components here.
 elseif (APPLE)
@@ -109,6 +95,9 @@ target_link_libraries(OgreGLSupport PUBLIC OgreMain PRIVATE ${PLATFORM_LIBS})
 target_include_directories(OgreGLSupport PUBLIC 
     "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
     "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/GLSL>"
+    "S:/electron-gp/src"
+    "S:/electron-gp/src/gpu"
+    "S:/electron-gp/src/third_party/khronos"
     PRIVATE "$<BUILD_INTERFACE:${NATIVE_INCLUDES}>")
 
 set_property(TARGET OgreGLSupport PROPERTY POSITION_INDEPENDENT_CODE ON)
