--- a/RenderSystems/CMakeLists.txt
+++ b/RenderSystems/CMakeLists.txt
@@ -54,6 +54,12 @@ if (OGRE_BUILD_RENDERSYSTEM_GL3PLUS)
 endif ()
 
 if (OGRE_BUILD_RENDERSYSTEM_GLES2)
-  add_subdirectory(GLES2)
+  if (NOT OPENGLES2_FOUND AND NOT OGRE_BUILD_RENDERSYSTEM_GLES2CHROMIUM)
+    MESSAGE(STATUS "Could not find dependency: GLES2 ")
+    MESSAGE(STATUS "Skipping GLES2 rendersystem build")
+    set(OGRE_BUILD_RENDERSYSTEM_GLES2 0)
+  else ()
+    add_subdirectory(GLES2)
+  endif()
 endif()
 
