--- a/RenderSystems/GLES2/CMakeLists.txt
+++ b/RenderSystems/GLES2/CMakeLists.txt
@@ -34,7 +34,7 @@ file(GLOB GLESW_HEADERS "include/GLES3/*.h")
 file(GLOB KHR_HEADERS "include/KHR/*.h")
 
 if(OGRE_CONFIG_ENABLE_GL_STATE_CACHE_SUPPORT)
-  set_source_files_properties(${CMAKE_CURRENT_SOURCE_DIR}/src/OgreGLES2StateCacheManager.cpp 
+  set_source_files_properties(${CMAKE_CURRENT_SOURCE_DIR}/src/OgreGLES2StateCacheManager.cpp
     PROPERTIES COMPILE_DEFINITIONS OGRE_ENABLE_STATE_CACHE)
 endif()
 
@@ -48,10 +48,10 @@ endif (OGRE_CONFIG_ENABLE_GLES2_CG_SUPPORT)
 # Add system specific settings
 if (APPLE)
   add_definitions(-DGLES_SILENCE_DEPRECATION)
-  file(GLOB PLATFORM_HEADERS "include/EAGL/*.h")
-  file(GLOB PLATFORM_SOURCES "src/EAGL/*.mm")
+  # file(GLOB PLATFORM_HEADERS "include/EAGL/*.h")
+  # file(GLOB PLATFORM_SOURCES "src/EAGL/*.mm")
 
-  include_directories(src/EAGL include/EAGL)
+  # include_directories(src/EAGL include/EAGL)
   link_directories(${OPENGLES2_LIBRARY_PATH})
   set(PLATFORM_HEADER_INSTALL "APPLE")
 endif ()
@@ -62,7 +62,7 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src/GLSLES/include)
 include_directories("D:/_DEV/ELECTRON/electron-gn/src" "D:/_DEV/ELECTRON/electron-gn/src/gpu" "D:/_DEV/ELECTRON/electron-gn/src/third_party/khronos")
 
 add_library(RenderSystem_GLES2 STATIC ${HEADER_FILES} ${GLESW_HEADERS} ${KHR_HEADERS} ${PLATFORM_HEADERS} ${SOURCE_FILES} ${PLATFORM_SOURCES} ${GLSLES_FILES})
-target_link_libraries(RenderSystem_GLES2 OgreMain OgreGLSupport "D:/_DEV/ELECTRON/electron-gn/src/out/Release/electron.lib" ${CMAKE_DL_LIBS})
+target_link_libraries(RenderSystem_GLES2 OgreMain OgreGLSupport ${CMAKE_DL_LIBS})
 target_include_directories(RenderSystem_GLES2 PUBLIC
     "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
     $<INSTALL_INTERFACE:include/OGRE/RenderSystems/GLES2>)
@@ -86,7 +86,7 @@ if (OGRE_CONFIG_THREADS)
   target_link_libraries(RenderSystem_GLES2 ${OGRE_THREAD_LIBRARIES})
 endif ()
 
-generate_export_header(RenderSystem_GLES2 
+generate_export_header(RenderSystem_GLES2
     EXPORT_MACRO_NAME _OgreGLES2Export
     EXPORT_FILE_NAME ${PROJECT_BINARY_DIR}/include/OgreGLES2Exports.h)
 
