ANGLE: update GLES2 code to work on MacOS with ANGLE

--- a/RenderSystems/GLES2/CMakeLists.txt
+++ b/RenderSystems/GLES2/CMakeLists.txt
@@ -48,10 +48,10 @@ endif (OGRE_CONFIG_ENABLE_GLES2_CG_SUPPORT)
 # Add system specific settings
 if (APPLE)
   add_definitions(-DGLES_SILENCE_DEPRECATION)
-  file(GLOB PLATFORM_HEADERS "include/EAGL/*.h")
-  file(GLOB PLATFORM_SOURCES "src/EAGL/*.mm")
+  # file(GLOB PLATFORM_HEADERS "include/EAGL/*.h")
+  # file(GLOB PLATFORM_SOURCES "src/EAGL/*.mm")
 
-  include_directories(src/EAGL include/EAGL)
+  # include_directories(src/EAGL include/EAGL)
   link_directories(${OPENGLES2_LIBRARY_PATH})
   set(PLATFORM_HEADER_INSTALL "APPLE")
 endif ()
@@ -62,7 +62,7 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src/GLSLES/include)
 include_directories("D:/_DEV/ELECTRON/electron-gn/src" "D:/_DEV/ELECTRON/electron-gn/src/gpu" "D:/_DEV/ELECTRON/electron-gn/src/third_party/khronos")
 
 add_library(RenderSystem_GLES2 STATIC ${HEADER_FILES} ${GLESW_HEADERS} ${KHR_HEADERS} ${PLATFORM_HEADERS} ${SOURCE_FILES} ${PLATFORM_SOURCES} ${GLSLES_FILES})
-target_link_libraries(RenderSystem_GLES2 OgreMain OgreGLSupport "D:/_DEV/ELECTRON/electron-gn/src/out/Release/electron.lib" ${CMAKE_DL_LIBS})
+target_link_libraries(RenderSystem_GLES2 OgreMain OgreGLSupport ${CMAKE_DL_LIBS})
 target_include_directories(RenderSystem_GLES2 PUBLIC
     "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
     $<INSTALL_INTERFACE:include/OGRE/RenderSystems/GLES2>)
