ANGLE: make it easier to build with electron ANGLE

--- a/CMake/CMakeLists.txt
+++ b/CMake/CMakeLists.txt
@@ -19,7 +19,7 @@ else()
 	set(OGRE_CMAKE_DIR "${OGRE_LIB_DIRECTORY}/OGRE/cmake")
 endif()
 
-set(INST_FILES Utils/FindPkgMacros.cmake) 
+set(INST_FILES Utils/FindPkgMacros.cmake)
 
 if (OGRE_CONFIG_THREAD_PROVIDER STREQUAL "poco")
   set(INST_FILES ${INST_FILES} Packages/FindPOCO.cmake)
@@ -35,6 +35,7 @@ set(STATIC_INST_FILES
   Packages/FindDirectX11.cmake
   Packages/FindFreeImage.cmake
   Packages/FindOpenGLES2.cmake
+	Packages/FindOpenGLES2CHR.cmake
   Packages/FindZZip.cmake
   Packages/FindSoftimage.cmake
   Packages/FindGLSLOptimizer.cmake
