--- a/RenderSystems/CMakeLists.txt
+++ b/RenderSystems/CMakeLists.txt
@@ -54,7 +54,7 @@ if (OGRE_BUILD_RENDERSYSTEM_GL3PLUS)
 endif ()
 
 if (OGRE_BUILD_RENDERSYSTEM_GLES2)
-  if (NOT OPENGLES2_FOUND AND NOT OGRE_BUILD_RENDERSYSTEM_GLES2CHROMIUM)
+  if (NOT OPENGLES2_FOUND AND NOT OPENGLES2CHR_FOUND)
     MESSAGE(STATUS "Could not find dependency: GLES2 ")
     MESSAGE(STATUS "Skipping GLES2 rendersystem build")
     set(OGRE_BUILD_RENDERSYSTEM_GLES2 0)
